--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,68 +1,51 @@
-<div class="navbar" id="header-top-section">
-  <div class="row-fluid clearfix">
-    <div class="navbar-inner span3">
-      <!-- <a class="brand" href="#">Title</a> -->
-      <div id="logo-section"> <!-- was class="span4" -->
-        <!-- used to include ":class => 'wonk-logo'" -->
-        <%= link_to image_tag('wonk-full-trans-bg-inverted.png', :class => 'header-image'), :controller => 'topics', :action => 'list' %>
+<nav class="navbar navbar-inverse navbar-fixed-top clearfix" role="navigation">
+  <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="#">Terranaut</a>
+  </div>
+
+  <!-- Collect the nav links, forms, and other content for toggling -->
+  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Link</a></li>
+      <li><a href="#">Link</a></li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Action</a></li>
+          <li><a href="#">Another action</a></li>
+          <li><a href="#">Something else here</a></li>
+          <li class="divider"></li>
+          <li><a href="#">Separated link</a></li>
+          <li class="divider"></li>
+          <li><a href="#">One more separated link</a></li>
+        </ul>
+      </li>
+    </ul>
+    <form class="navbar-form navbar-left" role="search">
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Search">
       </div>
-    </div> <!-- end navbar-inner span3 -->
-
-    <div class="navbar-inner span9"
-      <!-- begin ul -->
-      <ul class="nav" id="admin-section"> <!-- was span 8 -->
-
-        <!-- if user signed in -->
-        <% if signed_in? %>
-
-          <li id="more">
-            <!-- Single button -->
-            <div class="btn-group">
-              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                More <span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu pull-left" role="menu">
-                <li><%= link_to("About", {:controller => 'public', :action => 'about'}) %></li>
-                <li><%= link_to("My Account", {:controller => 'users', :action => 'show', :id => current_user.id }) %></li>
-                <li><%= link_to("Contact", {:controller => 'public', :action => 'contact'}) %></li>
-              </ul>
-            </div>
-          </li><!--  end #sign-in  -->
-
-          <li id="sign-out">
-            <%= link_to({:controller => 'sessions', :action => 'destroy'}, :method => :delete) do %>
-              Sign Out <%= image_tag('sign-in-30-trans-inverted.png', :class => 'header-image', :id => 'sign-in-image') %>
-            <% end %>
-            
-          </li><!--  end #sign-in  -->
-
-          <li class="divider-vertical"></li>
-
-          <li id="signed-in-as">
-            Signed in as <strong><%= current_user.username %></strong>
-          </li><!--  end #sign-in  -->
-
-          <!-- Bootstrap code for vertical divider -->
-          <!-- <li class="divider-vertical"></li> -->
-
-        <!-- if user not signed in -->
-        <% else %>
-
-          <li id="sign-in">
-            <%= link_to({:controller => 'sessions', :action => 'new'}) do %>
-              Sign In <%= image_tag('sign-in-30-trans-inverted.png', :class => 'header-image', :id => 'sign-in-image') %>
-            <% end %>
-          </li><!--  end #sign-in  -->
-
-          <li id="create-account">
-            <%= link_to({:controller => 'users', :action => 'new'}) do %>
-              Create Account <%= image_tag('create-account-30-trans-inverted.png', :class => 'header-image', :id => 'sign-in-image') %>
-            <% end %>
-          </li> <!-- end create account -->
-
-        <% end %>
-
-      </ul> 
-    </div> <!-- end navbar-inner -->
-  </div> <!-- end row fluid -->
-</div> <!-- end header-top-section -->
+      <button type="submit" class="btn btn-default">Submit</button>
+    </form>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="#">Link</a></li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Action</a></li>
+          <li><a href="#">Another action</a></li>
+          <li><a href="#">Something else here</a></li>
+          <li class="divider"></li>
+          <li><a href="#">Separated link</a></li>
+        </ul>
+      </li>
+    </ul>
+  </div><!-- /.navbar-collapse -->
+</nav>
