--- a/app/views/public/list.js.erb
+++ b/app/views/public/list.js.erb
@@ -1,5 +1,9 @@
-$(document).ready(function() {
-    $('#my-carousel').carousel({
-    //options here
-    });
+// $(document).ready(function() {
+//     $('#my-carousel').carousel({
+//     //options here
+//     });
+// });
+
+$('#my-carousel').carousel({
+    interval: 1200
 });
