--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -50,6 +50,17 @@ $fontVeryBig: 35px;
 #main {
   margin-top: 50px;
 }
+#page-canvas {
+  border: 1px solid rgba(0,0,0,0.1);
+  border: 1px solid #eee;
+  -webkit-border-radius: 6px;
+  border-radius: 6px;
+  margin-top: 30px;
+}
+#signin-wrapper {
+  margin-left: 50px;
+  margin-right: 50px;
+}
 
 // header-area
 .header-area {
