--- a/app/views/public/list.html.erb
+++ b/app/views/public/list.html.erb
@@ -17,11 +17,8 @@
 </div> <!-- end row fluid -->
 
 <!-- CAROUSEL -->
+<%= render(:partial => 'carousel') %>
+<%= render(:partial => 'carousel_search') %>
 
-<div class="row-fluid clearfix">
-  <%= render(:partial => 'carousel') %>
-</div> <!-- end row fluid -->
-
-<div class="row-fluid clearfix">
-  <%= render(:partial => 'carousel_search') %>
-</div> <!-- end row fluid -->
+<!-- BROWSE -->
+<%= render(:partial => 'browse') %>
