--- a/app/views/public/_carousel.html.erb
+++ b/app/views/public/_carousel.html.erb
@@ -1,37 +1,39 @@
-<div id="my-carousel" class="carousel slide">
-  <div class="carousel-inner">
-    <div class="item active">
-      <%= image_tag('snowboarder-in-flight.png') %>
-      <div class="container">
-        <div class="carousel-caption">
-          <h1><a href="#">156 cm Burton Custom Flying-V Restricted Snowboard</a></h1>
-          <p class="lead">Pat, Charleston, SC</p>
-          <!-- <a class="btn btn-large btn-primary" href="#">Sign up today</a> -->
+<div class="row-fluid clearfix">
+  <div id="my-carousel" class="carousel slide">
+    <div class="carousel-inner">
+      <div class="item active">
+        <%= image_tag('snowboarder-in-flight.png') %>
+        <div class="container">
+          <div class="carousel-caption">
+            <h1><a href="#">156 cm Burton Custom Flying-V Restricted Snowboard</a></h1>
+            <p class="lead">Pat, Charleston, SC</p>
+            <!-- <a class="btn btn-large btn-primary" href="#">Sign up today</a> -->
+          </div>
         </div>
       </div>
-    </div>
-    <div class="item">
-      <%= image_tag('sunset-surfer-water.png') %>
-      <div class="container">
-        <div class="carousel-caption">
-          <h1><a href="#">6'8" Firewire Alternator Surfboard</a></h1>
-          <p class="lead">Sandy, San Francisco, CA</p>
-          <!-- <a class="btn btn-large btn-primary" href="#">Learn more</a> -->
+      <div class="item">
+        <%= image_tag('sunset-surfer-water.png') %>
+        <div class="container">
+          <div class="carousel-caption">
+            <h1><a href="#">6'8" Firewire Alternator Surfboard</a></h1>
+            <p class="lead">Sandy, San Francisco, CA</p>
+            <!-- <a class="btn btn-large btn-primary" href="#">Learn more</a> -->
+          </div>
         </div>
       </div>
-    </div>
-    <div class="item">
-      <%= image_tag('kayaker-on-lake.png') %>
-      <div class="container">
-        <div class="carousel-caption">
-          <h1><a href="#">Old Town Cayuga 110 Kayak</a></h1>
-          <p class="lead">Janet, Kansas City, MO</p>
-          <!-- <a class="btn btn-large btn-primary" href="#">Browse gallery</a> -->
+      <div class="item">
+        <%= image_tag('kayaker-on-lake.png') %>
+        <div class="container">
+          <div class="carousel-caption">
+            <h1><a href="#">Old Town Cayuga 110 Kayak</a></h1>
+            <p class="lead">Janet, Kansas City, MO</p>
+            <!-- <a class="btn btn-large btn-primary" href="#">Browse gallery</a> -->
+          </div>
         </div>
       </div>
-    </div>
-  </div> <!-- end carousel-inner -->
-  <a class="left carousel-control" href="#my-carousel" data-slide="prev">‹</a>
-  <a class="right carousel-control" href="#my-carousel" data-slide="next">›</a>
+    </div> <!-- end carousel-inner -->
+    <a class="left carousel-control" href="#my-carousel" data-slide="prev">‹</a>
+    <a class="right carousel-control" href="#my-carousel" data-slide="next">›</a>
 
-</div><!-- carousel -->
+  </div><!-- carousel -->
+</div> <!-- end row fluid -->
