--- a/app/views/public/_carousel_search.html.erb
+++ b/app/views/public/_carousel_search.html.erb
@@ -1,30 +1,34 @@
-<!-- span2 -->
-<div class="span2"></div>
+<div class="row-fluid clearfix">
 
-<!-- span8 -->
-<div id="carousel-search" class="span8">
+	<!-- span2 -->
+	<div class="span2"></div>
 
-  <!-- container bootstrap setup -->
-  <div class="row-fluid clearfix search-box-group">
-	  <form class="navbar-form span4" role="search">
-	    <div class="form-group">
-	      <input type="text" class="form-control" placeholder="What do you want to do?">
-	    </div>
-	    <button type="submit" class="btn btn-default search">Go</button>
-	  </form>
-	  <form class="navbar-form span4" role="search">
-	    <div class="form-group">
-	      <input type="text" class="form-control" placeholder="Where?">
-	    </div>
-	    <button type="submit" class="btn btn-default search">Go</button>
-	  </form>
-	  <form class="navbar-form span4" role="search">
-	  	<div class="form-group pull-right">
-	      <input type="text" class="form-control" placeholder="When?">
-	    </div>
-	  </form>
-  </div> <!-- end row fluid -->
-</div> <!-- end span8 -->
+	<!-- span8 -->
+	<div id="carousel-search" class="span8">
 
-<!-- span2 -->
-<div class="span2"></div>
+	  <!-- container bootstrap setup -->
+	  <div class="row-fluid clearfix search-box-group">
+		  <form class="navbar-form span4" role="search">
+		    <div class="form-group">
+		      <input type="text" class="form-control" placeholder="What do you want to do?">
+		    </div>
+		    <button type="submit" class="btn btn-default search">Go</button>
+		  </form>
+		  <form class="navbar-form span4" role="search">
+		    <div class="form-group">
+		      <input type="text" class="form-control" placeholder="Where?">
+		    </div>
+		    <button type="submit" class="btn btn-default search">Go</button>
+		  </form>
+		  <form class="navbar-form span4" role="search">
+		  	<div class="form-group pull-right">
+		      <input type="text" class="form-control" placeholder="When?">
+		    </div>
+		  </form>
+	  </div> <!-- end row fluid -->
+	</div> <!-- end span8 -->
+
+	<!-- span2 -->
+	<div class="span2"></div>
+
+</div> <!-- end row fluid -->
