updated styling, added map image

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -401,6 +401,10 @@ form.custom-form {
     #browse table a {
       margin: 20px;
     }
+  #browse img {
+    margin: 0 auto;
+    display: block;
+  }
 button.btn#see-all {
   width: 10%;
   display: block;
